@@ -96,6 +96,25 @@ sub ansi_parser {
   };
 }
 
+=method attr_to_class
+
+Takes an ANSI attribute name such as 'red' or 'bold'
+and returns the corresponding class name.
+
+This allows subclasses to override the class names used.
+This can be useful for utilizing pre-existing CSS definitions
+(such as mapping C<'red'> to C<'text-danger'>).
+
+The default returns the string provided.
+
+  $hfat->attr_to_class('red'); # default returns 'red'
+
+=cut
+
+sub attr_to_class {
+  $_[1];
+}
+
 =method css
 
   my $css = $hfat->css();
@@ -144,7 +163,12 @@ sub css {
   my $styles = $self->_css_class_attr;
 
   my @css = (
-    map { "${prefix}$_ { " . $self->_css_attr_string($styles->{$_}) . " }" }
+    map {
+      sprintf "%s%s { %s }",
+        ${prefix},
+        $self->attr_to_class($_),
+        $self->_css_attr_string($styles->{$_})
+    }
       sort keys %$styles
   );
 
@@ -233,7 +257,7 @@ sub html {
         sprintf q[<%s %s="%s">%s</%s>], $tag,
           ($self->{inline_style}
             ? (style => join ' ', map { $self->_css_attr_string($styles->{$_}) } @$attr)
-            : (class => join ' ', map { $prefix . $_ } @$attr)
+            : (class => join ' ', map { $prefix . $self->attr_to_class($_) } @$attr)
           ), $h, $tag;
       }
 
